[package]
name = "kvproto"
version = "0.0.2"
keywords = ["TiKV"]
edition = "2018"
build = "build.rs"

[lib]
name = "kvproto"
path = "src/lib.rs"

[features]
gen = []

[dependencies]
protobuf = "2"
prost = "0.5"
prost-derive = "0.5"
bytes = "0.4"
futures = "0.1"
grpcio = { version = "0.5.0-alpha.1", features = ["prost-codec"] }
raft = { git = "https://github.com/pingcap/raft-rs.git", revision = "01a6df8cc4bea5f573ae37c26bfe6d5cdbfeaa28" }
lazy_static = "1.3"

[build-dependencies]
protobuf-build = "0.4.1"
